# transformer-failure-detection

./: .gitignore  README.md  README_EN.md  README_en.md  main.py  pyproject.toml  readme.md  readme_en.md
data/processed/: 2019_pseudo.csv  2020_pseudo.csv  dga_merged_processed.csv  dga_processed.csv  normalized_dataset_2019.csv  normalized_dataset_2020.csv  processed_dataset_2019.csv  processed_dataset_2020.csv
data/processed_merged/test_set/: X.npy  y_fdd.npy  y_rul.npy
data/processed_merged/train_set/: y_fdd.npy  y_rul.npy
data/processed_merged/val_set/: X.npy  y_fdd.npy  y_rul.npy
data/raw/: DGA-dataset.csv  DGA_dataset2.csv  dga_merged_dataset.csv
src/: DecisionTree.py  RandomForrestModel.py  SVM.py  check_distrubition.py  cnn.py  data_preprocessing.py  labelling.py  metrics_utils.py  neural_network.py  normalization.py  preprocessing.py  svm_model.py  visualization.py  visulazition.py  visulization.py
src/data_preprocessing/: build_sequences.py  load_data.py  validate_data.py
src/models/: DecisionTree.py  GaussianNB.py  LogisticRegression.py  NeuralNetwork.py  RandomForrest.py  SVM-2019-2020.py  SVM.py  SVM_2019.py  SVM_2020.py  XGP_Classifier.py  XG_Boost.py  autoencoder_anomally.py  check_class_distrubiton.py  knn.py  random_forrest.py
src/models/fdd_prediction_models/: train_grnn_fdd.py  train_random_forrest_fdd.py
src/models/rul_predictiction_model/: train_gru.py  train_lstm.py
src/models/rul_predictiction_model/models/: gru_rul.keras  gru_rul_history.json  gru_rul_scalers.npz  lstm_rul.keras  lstm_rul_history.json  lstm_rul_scalers.npz
